feat: use json body in the check request instead of query params
